[tool.poetry]
name = "DA_project"
version = "0.1.0"
description = ""
authors = ["KhudyakovGleb"]
license = "KhudyakovGleb <glebkhudyakov@yandex.ru>"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pandas = "2.2.3"
geopandas = "0.14.4"
shapely = "2.0.1"
tobler = "0.12.0"
spacy = "3.8.3"
pymupdf = "1.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
